--- a/Code/STM32/Nu_L5_embedded_CNN_PoC_V-0-1/Nu_L5_embedded_CNN_PoC_V-0-1.ioc
+++ b/Code/STM32/Nu_L5_embedded_CNN_PoC_V-0-1/Nu_L5_embedded_CNN_PoC_V-0-1.ioc
@@ -192,89 +192,89 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ICACHE_Init-ICACHE-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_SAI1_Init-SAI1-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_CRC_Init-CRC-false-HAL-true,8-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,10-MX_X_CUBE_AI_Init-STMicroelectronics.X-CUBE-AI.7.1.0-false-HAL-false,11-MX_X_CUBE_AI_Process-STMicroelectronics.X-CUBE-AI.7.1.0-false-HAL-false,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_SYSCLK
-RCC.ADCFreq_Value=86000000
-RCC.AHBFreq_Value=86000000
-RCC.APB1Freq_Value=86000000
-RCC.APB1TimFreq_Value=86000000
-RCC.APB2Freq_Value=86000000
-RCC.APB2TimFreq_Value=86000000
+RCC.ADCFreq_Value=108000000
+RCC.AHBFreq_Value=108000000
+RCC.APB1Freq_Value=108000000
+RCC.APB1TimFreq_Value=108000000
+RCC.APB2Freq_Value=108000000
+RCC.APB2TimFreq_Value=108000000
 RCC.CK48CLockSelection=RCC_USBCLKSOURCE_HSI48
 RCC.CRSFreq_Value=48000000
-RCC.CortexFreq_Value=86000000
+RCC.CortexFreq_Value=108000000
 RCC.DFSDMAudioFreq_Value=48000000
-RCC.DFSDMFreq_Value=86000000
-RCC.FCLKCortexFreq_Value=86000000
-RCC.FDCANFreq_Value=86000000
+RCC.DFSDMFreq_Value=108000000
+RCC.FCLKCortexFreq_Value=108000000
+RCC.FDCANFreq_Value=108000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=86000000
+RCC.HCLKFreq_Value=108000000
 RCC.HSE_VALUE=8000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=86000000
-RCC.I2C2Freq_Value=86000000
-RCC.I2C3Freq_Value=86000000
-RCC.I2C4Freq_Value=86000000
-RCC.IPParameters=ADCCLockSelection,ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CRSFreq_Value,CortexFreq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM3Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSIClockRange,MSI_VALUE,OCTOSPIMFreq_Value,PLLM,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1M,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2M,PLLSAI2N,PLLSAI2PoutputFreq_Value,PLLSAI2Source,PWRFreq_Value,RNGFreq_Value,RTCClockSelection,RTCFreq_Value,SAI1CLockSelection,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
-RCC.LPTIM1Freq_Value=86000000
-RCC.LPTIM2Freq_Value=86000000
-RCC.LPTIM3Freq_Value=86000000
-RCC.LPUART1Freq_Value=86000000
+RCC.I2C1Freq_Value=108000000
+RCC.I2C2Freq_Value=108000000
+RCC.I2C3Freq_Value=108000000
+RCC.I2C4Freq_Value=108000000
+RCC.IPParameters=ADCCLockSelection,ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CRSFreq_Value,CortexFreq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM3Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSIClockRange,MSI_VALUE,OCTOSPIMFreq_Value,PLLM,PLLN,PLLP,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1M,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2M,PLLSAI2N,PLLSAI2PoutputFreq_Value,PLLSAI2Source,PWRFreq_Value,RNGFreq_Value,RTCClockSelection,RTCFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
+RCC.LPTIM1Freq_Value=108000000
+RCC.LPTIM2Freq_Value=108000000
+RCC.LPTIM3Freq_Value=108000000
+RCC.LPUART1Freq_Value=108000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.MCO1PinFreq_Value=86000000
+RCC.MCO1PinFreq_Value=108000000
 RCC.MSIClockRange=RCC_MSIRANGE_11
 RCC.MSI_VALUE=48000000
-RCC.OCTOSPIMFreq_Value=86000000
-RCC.PLLM=12
-RCC.PLLN=43
-RCC.PLLPoutputFreq_Value=24571428.57142857
-RCC.PLLQoutputFreq_Value=86000000
-RCC.PLLRCLKFreq_Value=86000000
-RCC.PLLSAI1M=3
-RCC.PLLSAI1N=65
-RCC.PLLSAI1PoutputFreq_Value=148571428.57142857
-RCC.PLLSAI1QoutputFreq_Value=520000000
-RCC.PLLSAI1RoutputFreq_Value=520000000
+RCC.OCTOSPIMFreq_Value=108000000
+RCC.PLLM=4
+RCC.PLLN=18
+RCC.PLLP=RCC_PLLP_DIV17
+RCC.PLLPoutputFreq_Value=12705882.352941176
+RCC.PLLQoutputFreq_Value=108000000
+RCC.PLLRCLKFreq_Value=108000000
+RCC.PLLSAI1M=10
+RCC.PLLSAI1N=36
+RCC.PLLSAI1PoutputFreq_Value=24685714.285714287
+RCC.PLLSAI1QoutputFreq_Value=86400000
+RCC.PLLSAI1RoutputFreq_Value=86400000
 RCC.PLLSAI2M=4
 RCC.PLLSAI2N=21
 RCC.PLLSAI2PoutputFreq_Value=12000000
 RCC.PLLSAI2Source=RCC_PLLSAI2SOURCE_HSI
-RCC.PWRFreq_Value=86000000
+RCC.PWRFreq_Value=108000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
 RCC.RTCFreq_Value=32768
-RCC.SAI1CLockSelection=RCC_SAI1CLKSOURCE_PLL
-RCC.SAI1Freq_Value=24571428.57142857
-RCC.SAI2Freq_Value=148571428.57142857
-RCC.SDMMCFreq_Value=24571428.57142857
-RCC.SYSCLKFreq_VALUE=86000000
+RCC.SAI1Freq_Value=24685714.285714287
+RCC.SAI2Freq_Value=24685714.285714287
+RCC.SDMMCFreq_Value=12705882.352941176
+RCC.SYSCLKFreq_VALUE=108000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.UART4Freq_Value=86000000
-RCC.UART5Freq_Value=86000000
-RCC.USART1Freq_Value=86000000
-RCC.USART2Freq_Value=86000000
-RCC.USART3Freq_Value=86000000
+RCC.UART4Freq_Value=108000000
+RCC.UART5Freq_Value=108000000
+RCC.USART1Freq_Value=108000000
+RCC.USART2Freq_Value=108000000
+RCC.USART3Freq_Value=108000000
 RCC.USBFreq_Value=48000000
-RCC.VCOInput2Freq_Value=16000000
+RCC.VCOInput2Freq_Value=4800000
 RCC.VCOInput3Freq_Value=4000000
-RCC.VCOInputFreq_Value=4000000
-RCC.VCOOutputFreq_Value=172000000
-RCC.VCOSAI1OutputFreq_Value=1040000000
+RCC.VCOInputFreq_Value=12000000
+RCC.VCOOutputFreq_Value=216000000
+RCC.VCOSAI1OutputFreq_Value=172800000
 RCC.VCOSAI2OutputFreq_Value=84000000
 SAI1.AudioFrequency-SAI_A_Master=SAI_AUDIO_FREQUENCY_48K
 SAI1.AudioMode-SAI_A_Master=SAI_MODEMASTER_RX
 SAI1.BasicDataSize-SAI_A_Master=SAI_PROTOCOL_DATASIZE_24BIT
-SAI1.ErrorAudioFreq-SAI_A_Master=-0.01 %
+SAI1.ErrorAudioFreq-SAI_A_Master=0.44 %
 SAI1.IPParameters=VirtualProtocol-SAI_A_BASIC,Instance-SAI_A_Master,VirtualMode-SAI_A_Master,MckOutput-SAI_A_Master,InitProtocol-SAI_A_Master,RealAudioFreq-SAI_A_Master,ErrorAudioFreq-SAI_A_Master,MonoStereoMode-SAI_A_Master,AudioMode-SAI_A_Master,BasicDataSize-SAI_A_Master,AudioFrequency-SAI_A_Master
 SAI1.InitProtocol-SAI_A_Master=Enable
 SAI1.Instance-SAI_A_Master=SAI$Index_Block_A
 SAI1.MckOutput-SAI_A_Master=SAI_MCK_OUTPUT_DISABLE
 SAI1.MonoStereoMode-SAI_A_Master=SAI_MONOMODE
-SAI1.RealAudioFreq-SAI_A_Master=47.991 KHz
+SAI1.RealAudioFreq-SAI_A_Master=48.214 KHz
 SAI1.VirtualMode-SAI_A_Master=VM_MASTER
 SAI1.VirtualProtocol-SAI_A_BASIC=VM_BASIC_PROTOCOL
-STMicroelectronics.X-CUBE-AI.7.1.0.ActivationBufferSizeList=43432
+STMicroelectronics.X-CUBE-AI.7.1.0.ActivationBufferSizeList=41752
 STMicroelectronics.X-CUBE-AI.7.1.0.ActivationBuffers=pool0
 STMicroelectronics.X-CUBE-AI.7.1.0.ActivationNames=pool0
 STMicroelectronics.X-CUBE-AI.7.1.0.ActivationSizes=AI_CNN_DATA_ACTIVATION_1_SIZE
@@ -284,21 +284,21 @@ STMicroelectronics.X-CUBE-AI.7.1.0.DeviceJjApplication_Checked=true
 STMicroelectronics.X-CUBE-AI.7.1.0.HeapSize=0x800
 STMicroelectronics.X-CUBE-AI.7.1.0.IPParameters=HeapSize,StackSize,ModelName-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ModelType-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ModelKind-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ModelHashList,ModelNameList,WorkingBufferStartAddrList,ModelFlashOccupation-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ModelRamOccupation-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,LatestDirectoryUsed-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ModelCompression-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ModelMacc-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ModelActualCompression-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,ActivationBuffers,ActivationSizes,ActivationNames,InternalRamActivationBufferMaxSize,ActivationBufferSizeList,MaximumNumberOfInputLayer,MaximumNumberOfOutputLayer,MaximumSizeOfInputLayer,MaximumSizeOfOutputLayer,ReadyForCodeGeneration,ModelStructureFile-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a,XAaCUBEAaAICcArtificialOoIntelligenceJjCore,ApplicationCcDeviceJjApplication
 STMicroelectronics.X-CUBE-AI.7.1.0.InternalRamActivationBufferMaxSize=AI_CNN_DATA_ACTIVATIONS_SIZE
-STMicroelectronics.X-CUBE-AI.7.1.0.LatestDirectoryUsed-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=C\:\\Users\\j.tschavoll\\OneDrive - FH Vorarlberg\\Partnerunternehmen FHV\\FH\\BA\\Code\\Jupyter\\esc50_model_v2
+STMicroelectronics.X-CUBE-AI.7.1.0.LatestDirectoryUsed-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=C\:\\Users\\j.tschavoll\\OneDrive - FH Vorarlberg\\Partnerunternehmen FHV\\FH\\BA\\Code\\Jupyter\\esc50_model_v3
 STMicroelectronics.X-CUBE-AI.7.1.0.MaximumNumberOfInputLayer=1
 STMicroelectronics.X-CUBE-AI.7.1.0.MaximumNumberOfOutputLayer=1
 STMicroelectronics.X-CUBE-AI.7.1.0.MaximumSizeOfInputLayer=AI_CNN_IN_1_SIZE_BYTES
 STMicroelectronics.X-CUBE-AI.7.1.0.MaximumSizeOfOutputLayer=AI_CNN_OUT_1_SIZE_BYTES
-STMicroelectronics.X-CUBE-AI.7.1.0.ModelActualCompression-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=2.48
+STMicroelectronics.X-CUBE-AI.7.1.0.ModelActualCompression-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=1.41
 STMicroelectronics.X-CUBE-AI.7.1.0.ModelCompression-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=4
-STMicroelectronics.X-CUBE-AI.7.1.0.ModelFlashOccupation-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=275744
+STMicroelectronics.X-CUBE-AI.7.1.0.ModelFlashOccupation-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=406616
 STMicroelectronics.X-CUBE-AI.7.1.0.ModelHashList=56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a
 STMicroelectronics.X-CUBE-AI.7.1.0.ModelKind-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=TFLITE
-STMicroelectronics.X-CUBE-AI.7.1.0.ModelMacc-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=4150328
+STMicroelectronics.X-CUBE-AI.7.1.0.ModelMacc-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=9880088
 STMicroelectronics.X-CUBE-AI.7.1.0.ModelName-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=cnn
 STMicroelectronics.X-CUBE-AI.7.1.0.ModelNameList=cnn
-STMicroelectronics.X-CUBE-AI.7.1.0.ModelRamOccupation-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=43432
-STMicroelectronics.X-CUBE-AI.7.1.0.ModelStructureFile-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=C\:\\Users\\j.tschavoll\\OneDrive - FH Vorarlberg\\Partnerunternehmen FHV\\FH\\BA\\Code\\Jupyter\\esc50_model_v2\\esc50_model_v2_lite.tflite
+STMicroelectronics.X-CUBE-AI.7.1.0.ModelRamOccupation-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=41752
+STMicroelectronics.X-CUBE-AI.7.1.0.ModelStructureFile-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=C\:\\Users\\j.tschavoll\\OneDrive - FH Vorarlberg\\Partnerunternehmen FHV\\FH\\BA\\Code\\Jupyter\\esc50_model_v3\\esc50_model_v3_lite.tflite
 STMicroelectronics.X-CUBE-AI.7.1.0.ModelType-56ae4398f8fabd026c47133af068b6712fdda8aba92307d05664db8707e5a86a=STM32Cube.AI runtime
 STMicroelectronics.X-CUBE-AI.7.1.0.ReadyForCodeGeneration=true
 STMicroelectronics.X-CUBE-AI.7.1.0.StackSize=0x1000
